--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<style>
-		h1 {text-allign: center;}
+		h1 {text-align: center;}
+		p {text-align: center;}
+		div {text-align: center;}
 	</style>
 </head>
 <body>
