--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</style>
 </head>
 <body>
-	<img src="/images/V2.png" alt="Mountain">
+	<img src="V2.png" alt="Mountain">
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
 </body>
