--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</style>
 </head>
 <body>
-	<img src="vs.png">
+	<img src="vs.png" width="400" height="1200">
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
 </body>
