--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</style>
 </head>
 <body>
-	<img src="vs.png" width="300" height="1000">
+	<img src="vs.png" width="300" height="1000" class="center">
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
 </body>
