--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	</style>
 </head>
 <body>
-	<img src="vs.png" width="200" height="1000" class="center">
+	<center>
+	<img src="vs.png" width="200" height="1000">
+	</center>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
 </body>
