--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	</style>
 </head>
 <body>
-	<img src="vs.png" alt= "taking_fly" width="1200" height="400">
+	<center>
+		<img src="vs.png" alt= "taking_fly" width="900" height="200">
+	</center>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
 </body>
