--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<center>
-		<img src="vs.png" alt= "taking_fly" width="900" height="200">
+		<img src="v1.png" alt= "taking_fly" width="900" height="200">
 	</center>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
