--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 	</style>
 </head>
 <body>
-	<center>
-		<img src="v1.png" alt= "taking_fly" width="1000" height="210">
-	</center>
 	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
+	<p>This is going to be my page.</p>
+	<p>Work in progress...</p>
 </body>
 </html>
