--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!---
 		<img height=25 src="https://user-images.githubusercontent.com/18670428/67620073-ca558e00-f7fa-11e9-9ea2-ed3a80c59210.png"/><img height=25/>
 		--->
-		<img src="t_icon_96.svg">
+		<img src="t_icon_96.svg" width="25" height="25">
 	</p>
 </body>
 </html>
