--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<style>
 		h1 {text-align: center;}
@@ -7,18 +8,41 @@
 		div {text-align: center;}
 	</style>
 </head>
+
 <body>
-	<h1>Hello World</h1>
-	<p>This is going to be my page.</p>
-	<p>Work in progress...</p>
-	<p align='center'>
-		<img height=25 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"/><img height=25/>
-		<img height=25 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/r/r-original.svg"/><img height=25/>
-		<img height=25 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg"/><img height=25/>
-		<!---
-		<img height=25 src="https://user-images.githubusercontent.com/18670428/67620073-ca558e00-f7fa-11e9-9ea2-ed3a80c59210.png"/><img height=25/>
-		--->
-		<img src="t_icon_96.svg" width="25" height="25">
-	</p>
+	<!---
+	<img src="/images/V2.png" alt="Mountain">
+	<header>
+		<h1>Hello World</h1>
+		<p>This is going to be my page.</p>
+		<p>Work in progress...</p>
+	</header>
+	--->
+	<div id='navbar' class='navbar navbar-default navbar-fixed-top'>
+		<div>
+			<h1>Hello World</h1>
+		</div>
+		<div>
+			<p align='left'>
+			<img height=25 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"/><img height=25/>
+			<img height=25 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/r/r-original.svg"/><img height=25/>
+			<img height=25 src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg"/><img height=25/>
+			<!---
+			<img height=25 src="https://user-images.githubusercontent.com/18670428/67620073-ca558e00-f7fa-11e9-9ea2-ed3a80c59210.png"/><img height=25/>
+			--->
+			<a href="https://public.tableau.com/app/profile/bogdan3663">
+				<img src="t_icon_96.svg" width="25" height="25"></a>
+			<a href="https://github.com/bogdansmd">
+				<img src="github_mark.png" height="25" width="25"></a>
+			<a href="https://www.linkedin.com/in/bogdan-smedescu-450a75185/">
+				<img height="25" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg"><img height=25/></a>
+			</p>
+		</div>
+	</div>
+	<!--  
+		         <(Hello!)
+		~~(^∆^)~~
+	--->
 </body>
+
 </html>
