--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!---
 	<img src="/images/V2.png" alt="Mountain">
 	<header>
-		<h1>Hello World</h1>
+		<h1>Hello World!</h1>
 		<p>This is going to be my page.</p>
 		<p>Work in progress...</p>
 	</header>
